# AstralStory

./: .gitignore  README.md  pyproject.toml
astralstory/: __init__.py
astralstory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
astralstory/cli/: __init__.py  agent.py  animation.py  bridge.py  dashboard.py  diagnostics.py  main.py  scene.py  shell.py  shell_history.py  state.py  styling.py  world.py
astralstory/engine/: __init__.py  agent_engine.py  bridge_engine.py  logger.py  scene_engine.py  world_engine.py
tests/: __init__.py  test_cli.py  test_engines.py
