[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astralstory"
version = "0.1.0"
description = "AstralStory — deterministic creative engine CLI"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "psutil>=5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
astralstory = "astralstory.cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["astralstory*"]
